--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <center>
-<font size="100pt">JMC Risk Management</font>
+<font style="Helvetica" size="100pt">JMC Risk Management</font>
 </center>
 </body>
 </html>
