--- a/test/index.html
+++ b/test/index.html
@@ -13,7 +13,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<h1><strong>JMC Risk Management</strong><br />
+					<h1><strong>JMC Risk Management</strong><p>
 					Creating growth through data.<br />
 					</h1>
 				</div>
